{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 67,
  "lineage": "e47a30b3-1df4-c975-6d19-b1aeb39cf166",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "maingw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093269691064:internet-gateway/igw-07c0e117862915710",
            "id": "igw-07c0e117862915710",
            "owner_id": "093269691064",
            "tags": {
              "Name": "terraformgateway"
            },
            "vpc_id": "vpc-036f7e31181f5cc58"
          },
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraformroutetable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01ca0a64816b322ce",
            "owner_id": "093269691064",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07c0e117862915710",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tfpublicroutetable"
            },
            "vpc_id": "vpc-036f7e31181f5cc58"
          },
          "dependencies": [
            "aws_internet_gateway.maingw",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_public_sn_rt_assn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0297491e0e049c30b",
            "route_table_id": "rtb-01ca0a64816b322ce",
            "subnet_id": "subnet-0cd2bb4415915f328"
          },
          "dependencies": [
            "aws_internet_gateway.maingw",
            "aws_route_table.terraformroutetable",
            "aws_subnet.terraformpublicsubnet",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraformsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093269691064:security-group/sg-0d8d8589bc38c6750",
            "description": "created with terraform",
            "egress": [],
            "id": "sg-0d8d8589bc38c6750",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraformsg",
            "name_prefix": "",
            "owner_id": "093269691064",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terrsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-036f7e31181f5cc58"
          },
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3769727597",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d8d8589bc38c6750",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.terraformsg",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1254674101",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d8d8589bc38c6750",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.terraformsg",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1446717400",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d8d8589bc38c6750",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.terraformsg",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraformprivatesubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093269691064:subnet/subnet-09b5ba15a55e81bac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/25",
            "id": "subnet-09b5ba15a55e81bac",
            "map_public_ip_on_launch": false,
            "owner_id": "093269691064",
            "tags": {
              "name": "tfprivatesubnet"
            },
            "vpc_id": "vpc-036f7e31181f5cc58"
          },
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraformpublicsubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093269691064:subnet/subnet-0cd2bb4415915f328",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/25",
            "id": "subnet-0cd2bb4415915f328",
            "map_public_ip_on_launch": false,
            "owner_id": "093269691064",
            "tags": {
              "name": "tfpublicsubnet"
            },
            "vpc_id": "vpc-036f7e31181f5cc58"
          },
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tfvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093269691064:vpc/vpc-036f7e31181f5cc58",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/21",
            "default_network_acl_id": "acl-0cb29c8ec0cb22c0c",
            "default_route_table_id": "rtb-0ee383f27cb660005",
            "default_security_group_id": "sg-092a12d4c71a07baf",
            "dhcp_options_id": "dopt-707dfb0a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-036f7e31181f5cc58",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ee383f27cb660005",
            "owner_id": "093269691064",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}